// Premier XI — Prisma schema
// NOTE: SQLite ไม่รองรับ native enum จึงใช้ String + constants ที่ src/lib/constants.ts

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

/// ผู้เล่น / บัญชีผู้ใช้ (รวมกระเป๋าเงินทุกสกุล)
model User {
  id           String  @id @default(cuid())
  username     String  @unique
  teamName     String? // ชื่อทีมที่ตั้งเอง — โชว์แทน username ใน public context (เช่น Fantasy leaderboard); null = ยังไม่ตั้ง → fallback เป็น username, ไม่บังคับ unique
  phone        String  @unique
  passwordHash String
  isAdmin      Boolean @default(false)

  // Account progression
  level Int @default(1)
  exp   Int @default(0)

  // Currencies (Phase 0 economy) — silver/gold/shards เท่านั้น (ดู docs/design.md §เศรษฐกิจ)
  silver Int @default(0)
  gold   Int @default(0)
  shards Int @default(0) // รวมจากการ์ดซ้ำทุก tier (Bronze/Silver/Gold/Hero/Legend) — แลกเปิดซองฟรีได้ทุกแบบ

  // Pity: จำนวนครั้งที่เปิด Premium ติดกันโดยยังไม่ได้ Gold (ไม่ได้ใช้แล้วหลังยกเลิก Premium pack — เก็บไว้เผื่ออนาคต)
  pityCounter Int @default(0)

  // Daily login
  loginStreak   Int       @default(0)
  lastClaimDate DateTime?
  totalLogins   Int       @default(0) // จำนวนวันที่เคย login รวม (ไม่รีเซ็ตแม้ streak ขาด) — ใช้เช็ค milestone

  // Onboarding
  starterClaimed Boolean @default(false)

  // Launch promotion: milestone แจกซองพิเศษฟรีครั้งเดียวตอน login ครบ 15/30 วัน (นับจาก totalLogins ไม่ใช่ streak)
  evoMilestoneClaimed   Boolean @default(false)
  primeMilestoneClaimed Boolean @default(false)

  // Launch promotion: โบนัส Gold +20% ตอนเติมเงินจริงครั้งแรก
  hasDeposited Boolean @default(false)

  // Notification center: เวลาที่อ่านข่าว (Announcement) ล่าสุด — ใช้คำนวณ unread ของข่าว
  lastReadNewsAt DateTime?

  // PvP (Phase 3) — tier derive จาก pvpRP ผ่าน tierForRP() ใน src/lib/pvp.ts เสมอ ไม่ store tier แยก
  pvpRP           Int       @default(0)
  pvpSeasonKey    String? // "YYYY-MM" แบบ UTC (ดู seasonKey() ใน pvp.ts) — null = ยังไม่เคยแข่งเลย
  pvpWinStreak    Int       @default(0)
  pvpMatchesToday Int       @default(0)
  pvpMatchesDate  DateTime? // เทียบ dayIndex() เหมือน daily.ts เพื่อรีเซ็ตโควตารายวัน

  // Achievement (category "activity") — lifetime counter เริ่มนับ 0 ตั้งแต่ deploy ระบบนี้ ไม่ backfill ย้อนหลัง
  // ดู docs/superpowers/specs/2026-07-20-achievement-collection-design.md Non-goals
  totalPacksOpened Int @default(0) // นับเฉพาะ openPack()/openPackWithShards() ที่ user กดเอง — ห้ามนับ starter/free pack จาก milestone อื่น
  pvpTotalWins     Int @default(0) // นับชนะสะสมตลอดกาล (ต่างจาก pvpWinStreak ที่รีเซ็ตเมื่อแพ้)

  createdAt   DateTime  @default(now())
  lastLoginAt DateTime?

  cards               UserCard[]
  squad               Squad?
  notifications       Notification[]
  announcements       Announcement[]         @relation("AnnouncementAuthor")
  missionProgress     MissionProgress[]
  achievementProgress AchievementProgress[]
  fantasyEntries      FantasyEntry[]
  fantasyScores       FantasyGameweekScore[]
  fantasyRewards      FantasyRewardGrant[]
}

/// นักเตะจริง (ตัวตนของนักเตะ 1 คน — หนึ่งคนมีได้หลายการ์ด/หลายเวอร์ชัน)
model Player {
  id       String @id @default(cuid())
  name     String
  club     String
  nation   String
  league   String @default("Premier League")
  position String // ตำแหน่งหลัก (ดู POSITIONS ใน constants)

  cards        Card[]
  matchStats   PlayerMatchStat[]
  fantasySlots FantasyEntrySlot[]
  createdAt    DateTime           @default(now())

  // stable identity สำหรับ card-import upsert (prisma/card-import.ts) — กัน reimport สร้าง id ใหม่ทุกครั้ง
  @@unique([name, club])
}

/// การ์ด = เวอร์ชันหนึ่งของนักเตะ (เช่น Salah Gold, Salah TOTW) พร้อมค่าพลัง
model Card {
  id       String @id @default(cuid())
  playerId String
  player   Player @relation(fields: [playerId], references: [id], onDelete: Cascade)

  tier     String // Bronze, Silver, Gold, Elite, Hero, Icon, Event, TOTW, TOTS, Legend
  category String @default("normal") // normal | special
  position String

  ovr       Int
  pace      Int
  shooting  Int
  passing   Int
  dribbling Int
  defending Int
  physical  Int

  // ข้อมูลเสริมที่อ่านจากหน้าการ์ด
  altPositions String? // คั่นด้วย comma เช่น "LM,ST"
  foot         String? // R | L
  skillMoves   Int? // 1-5
  weakFoot     Int? // 1-5
  indexRating  Float? // เลขในกรอบสีเขียวมุมล่างขวา

  imageUrl  String?
  isStarter Boolean @default(false) // ใช้ในกล่อง Starter Pack ได้หรือไม่

  owners       UserCard[]
  squadSlots   SquadSlot[]
  fantasySlots FantasyEntrySlot[]
  createdAt    DateTime           @default(now())

  @@unique([playerId, category]) // stable identity สำหรับ card-import upsert (prisma/card-import.ts)
  @@index([tier])
  @@index([category])
}

/// ความเป็นเจ้าของการ์ดของผู้เล่น (ถือได้ 1 ใบต่อการ์ด — ซ้ำ = แปลงเป็น shard)
model UserCard {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  cardId String
  card   Card   @relation(fields: [cardId], references: [id], onDelete: Cascade)

  acquiredAt DateTime @default(now())

  @@unique([userId, cardId])
  @@index([userId])
}

/// ทีมของผู้เล่น (หนึ่งทีมต่อผู้ใช้)
model Squad {
  id        String      @id @default(cuid())
  userId    String      @unique
  user      User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  formation String      @default("4-3-3")
  slots     SquadSlot[]
  updatedAt DateTime    @updatedAt

  // PvP matchmaking query filter เท่านั้น — ไม่ใช่ source of truth ของแมตช์จริง (ดู pvp.ts: findOpponent/playPvpMatch)
  cachedRating Int @default(0)

  @@index([cachedRating])
}

/// ช่องในทีม (0-10) ผูกกับการ์ดที่ผู้เล่นมี
model SquadSlot {
  id      String  @id @default(cuid())
  squadId String
  squad   Squad   @relation(fields: [squadId], references: [id], onDelete: Cascade)
  index   Int
  cardId  String?
  card    Card?   @relation(fields: [cardId], references: [id], onDelete: SetNull)

  @@unique([squadId, index])
}

/// การแจ้งเตือนกิจกรรมส่วนตัวของผู้เล่น (เปิดซอง/เลเวลอัพ/รับรางวัล ฯลฯ)
/// type เป็น String ตาม constants (SQLite ไม่รองรับ enum) — ดู NOTIFICATION_TYPE ใน src/lib/constants.ts
model Notification {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  type  String
  title String
  body  String?
  href  String? // deep link เช่น /collection, /pack

  /// key กันสร้างซ้ำสำหรับ notification ที่ผูกกับ resumable operation (เช่น Fantasy scoring ที่ resume ได้หลัง
  /// crash) รูปแบบ "fantasy:score:<gameweekId>:<userId>" — null สำหรับ notification ทั่วไปที่ยังสร้างซ้ำได้ปกติ
  /// (pack/PvP/mission ฯลฯ) ดู createNotificationOnce ใน src/lib/notifications.ts
  idempotencyKey String? @unique

  read      Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([userId, read])
  @@index([userId, createdAt])
}

/// ข่าว/ประกาศแบบ broadcast (admin เขียน เห็นทุกคน)
model Announcement {
  id        String   @id @default(cuid())
  title     String
  body      String
  published Boolean  @default(true)
  createdAt DateTime @default(now())

  authorId String?
  author   User?   @relation("AnnouncementAuthor", fields: [authorId], references: [id], onDelete: SetNull)

  @@index([published, createdAt])
}

/// ความคืบหน้ามิชชั่น Daily/Weekly — ตารางเดียว generic ใช้ร่วมกับทุกมิชชั่นในอนาคต (ไม่ต้อง migrate เพิ่มเวลาเพิ่มมิชชั่นใหม่)
/// missionKey ต้องมาจาก MISSION_KEYS ใน src/lib/missionConfig.ts เท่านั้น — ดู docs/superpowers/specs/2026-07-17-daily-weekly-mission-design.md
model MissionProgress {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  missionKey String // เช่น "daily_login" — จาก MISSION_KEYS เท่านั้น
  periodKey  String // daily: epoch-day string / weekly: epoch-week string (ดู src/lib/missionPeriod.ts)

  progress Int     @default(0)
  claimed  Boolean @default(false)

  updatedAt DateTime @updatedAt

  @@unique([userId, missionKey, periodKey])
  @@index([userId, periodKey])
}

/// สถานะเคลม Achievement — ตัวเดียว generic ใช้ร่วมทุกหมวด (activity/club/meta)
/// progress ไม่เก็บในตารางนี้ — คำนวณสดเสมอจาก User counter (activity) หรือ UserCard join (club/meta)
/// achievementKey ต้องมาจาก ACHIEVEMENTS ใน src/lib/achievementConfig.ts เท่านั้น
/// row จะถูกสร้างก็ต่อเมื่อเคลมสำเร็จเท่านั้น (ไม่มี "progress row" สร้างล่วงหน้าเหมือน MissionProgress)
model AchievementProgress {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  achievementKey String

  claimed   Boolean   @default(false)
  claimedAt DateTime?

  @@unique([userId, achievementKey])
  @@index([userId])
}

/// Gameweek — รอบการแข่งขัน Fantasy (1 สัปดาห์) — ดู docs/superpowers/specs/2026-07-20-fantasy-design.md
model Gameweek {
  id       String   @id @default(cuid())
  number   Int      @unique
  deadline DateTime
  monthKey String // "YYYY-MM" UTC — derive จาก deadline ตอนสร้าง แล้ว freeze (ห้ามใช้วันที่ปิด)
  status   String   @default("UPCOMING") // UPCOMING | LOCKED | SCORING | SCORED

  scoringStartedAt DateTime?
  scoredAt         DateTime?

  matches Match[]
  entries FantasyEntry[]
  scores  FantasyGameweekScore[]

  createdAt DateTime @default(now())

  @@index([status])
  @@index([monthKey])
}

/// แมตช์จริงใน Gameweek (admin กรอก — ยังไม่ implement ใน 7A)
model Match {
  id         String   @id @default(cuid())
  gameweekId String
  gameweek   Gameweek @relation(fields: [gameweekId], references: [id], onDelete: Cascade)

  homeClub  String
  awayClub  String
  homeScore Int?
  awayScore Int?
  kickoffAt DateTime?
  status    String    @default("SCHEDULED") // SCHEDULED | PLAYED | POSTPONED | CANCELLED

  providerFixtureId String? @unique // จาก API-Football — กัน sync ซ้ำ (Phase 7D)

  stats PlayerMatchStat[]

  @@index([gameweekId])
}

/// สถิติรายนักเตะต่อแมตช์ (admin กรอก — ยังไม่ implement ใน 7A)
model PlayerMatchStat {
  id       String @id @default(cuid())
  matchId  String
  match    Match  @relation(fields: [matchId], references: [id], onDelete: Cascade)
  playerId String
  player   Player @relation(fields: [playerId], references: [id], onDelete: Cascade)

  clubSide      String // HOME | AWAY — freeze ตอนกรอก ไม่ derive จาก Player.club สด
  positionGroup String // GK | DEF | MID | ATT — freeze ตอนกรอกจาก Player.position ขณะนั้น (เหตุผลเดียวกับ clubSide)
  // กัน re-import การ์ด (prisma/card-import.ts แก้ Player.position ได้) เปลี่ยนกลุ่มตำแหน่งย้อนหลังของสถิติที่กรอกไปแล้ว
  // (เช่น TOTW ที่คำนวณคะแนน/จัดกลุ่มจากสถิติเก่า — ต้องอ่านค่านี้ ห้าม derive จาก Player.position สดตอน query)

  minutes  Int @default(0)
  goals    Int @default(0)
  assists  Int @default(0)
  yellow   Int @default(0)
  red      Int @default(0)
  ownGoals Int @default(0)

  @@unique([matchId, playerId])
  @@index([playerId])
}

/// ทีม Fantasy ของ user สำหรับ Gameweek หนึ่งๆ — immutable หลัง deadline (เขียนที่ตอน save เท่านั้น)
model FantasyEntry {
  id         String   @id @default(cuid())
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  gameweekId String
  gameweek   Gameweek @relation(fields: [gameweekId], references: [id], onDelete: Cascade)

  formation   String
  submittedAt DateTime? // null = clone อัตโนมัติ ยังไม่กด save เอง → ไม่มีสิทธิ์รับรางวัล (7B)
  updatedAt   DateTime  @updatedAt

  slots FantasyEntrySlot[]

  @@unique([userId, gameweekId])
  @@index([gameweekId])
}

/// ช่องในทีม Fantasy (0-10 ตัวจริง, 11-14 สำรอง) — freeze ข้อมูลที่ใช้คิดคะแนนภายหลัง
model FantasyEntrySlot {
  id      String       @id @default(cuid())
  entryId String
  entry   FantasyEntry @relation(fields: [entryId], references: [id], onDelete: Cascade)

  // Restrict (ไม่ Cascade) — slot นี้คือ snapshot ที่ต้อง freeze ไว้คิดคะแนนย้อนหลัง การลบ Card/Player
  // ต้นทางไม่ควรลบ slot ที่ส่งไปแล้วไปด้วยแบบเงียบๆ
  cardId   String
  card     Card   @relation(fields: [cardId], references: [id], onDelete: Restrict)
  playerId String // freeze — ใช้ join กับ PlayerMatchStat ตอนคิดคะแนน (7B)
  player   Player @relation(fields: [playerId], references: [id], onDelete: Restrict)

  fantasyPositionGroup String // GK | DEF | MID | ATT — freeze ตอน save ห้าม derive สด

  slotIndex     Int // 0-10 = ตัวจริง, 11-14 = สำรอง
  isStarter     Boolean
  benchPriority Int? // 1-4 สำหรับตัวสำรองเท่านั้น
  isCaptain     Boolean @default(false)
  isViceCaptain Boolean @default(false)

  @@unique([entryId, slotIndex])
  @@unique([entryId, cardId])
  @@index([playerId])
}

/// คะแนนที่คำนวณแล้วของ user ต่อ Gameweek + อันดับ (คำนวณจริงใน 7B)
model FantasyGameweekScore {
  id         String   @id @default(cuid())
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  gameweekId String
  gameweek   Gameweek @relation(fields: [gameweekId], references: [id], onDelete: Cascade)

  points     Int
  rank       Int?
  rewardTier String?

  createdAt DateTime @default(now())

  @@unique([userId, gameweekId])
  @@index([gameweekId, points])
}

/// Ledger การแจกรางวัล — unique กันแจกซ้ำตอน retry/resume (ใช้จริงใน 7B/7C)
model FantasyRewardGrant {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  periodType String // WEEKLY | MONTHLY
  periodKey  String // weekly: gameweekId / monthly: "YYYY-MM"
  rewardType String // SILVER | GOLD | PACK

  amount Int?
  packId String?

  grantedAt DateTime @default(now())

  @@unique([userId, periodType, periodKey, rewardType])
  @@index([periodType, periodKey])
}

/// Global claim record ของ monthly settlement (ใช้จริงใน 7C)
model FantasySettlement {
  id         String @id @default(cuid())
  periodType String
  periodKey  String

  status      String    @default("PENDING") // PENDING | PROCESSING | COMPLETED
  startedAt   DateTime?
  completedAt DateTime?

  @@unique([periodType, periodKey])
}
